--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <br>
 
             <a href="https://www.cnn.com/" return="_blank">
-                <img class="contain-image" src="./assets/images/glen-carrie-3jz8SsGXBvk-unsplash.jpg" alt="tennis ball">
+                <img class="contain-image" src="./assets/images/petsocialmedia.png" alt="Pawsome Screenshot Image">
             </a>
-            <p>Tennis Ball App</p>
+            <p> Pawsome-- Pet Social Media App</p>
 
             <a href="https://www.cnn.com/" return="_blank">
                 <img class="contain-image" src="./assets/images/susan-q-yin-1O6_I_6STAU-unsplash.jpg" alt="dog treats">
